<resources>
    <string name="app_name">Kiya Learning</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account">Already have an account? <font color='#01C6DB'>Login</font></string>
    <string name="email_cant_be_blank">Email can\'t be empty</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="error_network">Check network connection…</string>
    <string name="server_error">Something went wrong…</string>
    <string name="track_duties_attendance_and_sales_performance_at_all_stages">Track duties, attendance and sales performance at all stages.</string>
    <string name="manage_your_sales_lead_and_their_status_anytime_from_anywhere">Manage your sales lead and their status anytime from anywhere.</string>
    <string name="prioritise_sales_followup_with_reminders_on_clicks">Prioritise sales followup with reminders on clicks.</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="log_in">Log In</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_user_id">Enter your user id</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_a_message">Type a message</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_the_otp_code_we_sent_to_your_mobile">Enter the OTP Code we sent to your Mobile</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_valid_number">Please Enter Valid Number</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="please_select_profile">Please Select Profile</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="resend_code">Resend Code</string>
    <string name="choose_file_type">Choose File Type</string>
    <string name="verify_account">Verify Account</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="location_permission">Location Permission</string>
    <string name="this_permission_is_required_to_access_your_location_for_showing_dealers_and_mills_around_you">This permission is required to access your location for showing dealers and mills around you</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="press_back_again_exit">Press back again to exit…</string>
    <string name="your_location">Your Location</string>
    <string name="location_name_comes_here">Location Name comes here</string>
    <string name="use_this_location">Use this Location</string>
    <string name="location_not_found">Location not found!</string>
    <string name="verify">Verify</string>
    <string name="title_home">Home</string>
    <string name="title_matches">Matches</string>
    <string name="title_payout">Payout</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_profile">My Profile</string>
    <string name="_18">18</string>
    <string name="classes__taken">Classes\nTaken</string>
    <string name="earning">Earning</string>
    <string name="profile">Profile</string>
    <string name="please_enter_your_email_address_to_receive_a_verification_code">Please enter your email address to receive a verification code</string>
    <string name="send">Send</string>
    <string name="back_to_login">Back to Login</string>
    <string name="attendance">Attendance</string>
    <string name="paid">Paid</string>
    <string name="classes_offered">Classes Offered</string>
    <string name="classes__offered">Classes\nOffered</string>
    <string name="due">Due</string>
    <string name="dashboard">DashBoard</string>
    <string name="title_shift">Shift</string>
    <string name="title_profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="log_out">Log Out</string>
    <string name="new_classes">New Classes</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="seprator">|</string>
    <string name="name_">Name :</string>
    <string name="contracted_fees">Contracted Fees :</string>
    <string name="online">Online</string>
    <string name="receive_on">Receive On :</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="class_date_">Class Date :</string>
    <string name="reschedule_class_date_">Reschedule Class Date :</string>
    <string name="class_time">Class Time :</string>
    <string name="reschedule_class_time_">Reschedule Class Time :</string>
    <string name="no_data_available">No Data Available</string>
    <string name="accepted">Accepted</string>
    <string name="join_class">Join Class</string>
    <string name="approved">Approved</string>
    <string name="_30">$30</string>
    <string name="hold_penalty">Hold/Penalty</string>
    <string name="date_range">Date Range</string>
    <string name="monthly">Monthly</string>
    <string name="today">Today</string>
    <string name="my_wallet">My Wallet</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="_5000">5000</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="library">Library</string>
    <string name="rajesh_kumar">Rajesh Kumar</string>
    <string name="check_in_">Check In:</string>
    <string name="check_out">Check Out :</string>
    <string name="present_attendance">Present/Attendance</string>
    <string name="absent_attendance">Absent/Attendance</string>
    <string name="course">Course</string>
    <string name="books">Books</string>
    <string name="others">Others</string>
    <string name="file_name_">File Name :</string>
    <string name="country_">Country :</string>
    <string name="curriculum_">Curriculum :</string>
    <string name="grade">Grade :</string>
    <string name="download_pdf">Download PDF</string>
    <string name="english">English</string>
    <string name="about_us">About Us</string>
    <string name="since_the_beginning_of_the_internet_millions_and_millions_and_millions_of_blogs_have_been_created_many_have_died_due_to_lost_interest_or_their_owners_giving_up_on_the_idea_while_others_have_thrived_and_continue_to_grow_making_money_and_earning_their_owners_a_steady_income_it_s_a_constant_evolution_of_content_that_keeps_people_coming_back_for_more_especially_if_these_blogs_contact_highly_resourceful_material_that_people_find_useful_and_interesting_each_example_listed_in_this_blog_post_are_all_different_in_some_way_and_all_bring_something_unique_to_their_readers_subscribers_i_want_to_show_you_what_is_possible_and_how_you_can_take_inspiration_from_them_and_create_an_awesome_blog_of_your_own"><![CDATA[Since the beginning of the internet, millions and millions and millions of blogs have been created. Many have died due to lost interest or their owners giving up on the idea, while others have thrived and continue to grow, making money and earning their owners a steady income. It’s a constant evolution of content that keeps people coming back for more, especially if these blogs contact highly resourceful material that people find useful and interesting. Each example listed in this blog post are all different in some way and all bring something unique to their readers & subscribers. I want to show you what is possible and how you can take inspiration from them and create an awesome blog of your own.]]></string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="per_hour_fee">Per Hour fee ($)</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="upload_aadhar_card">Upload Aadhar Card</string>
    <string name="upload_pan_card">Upload PAN Card</string>
    <string name="general">General</string>
    <string name="title_classes">Classes</string>
    <string name="subject_">Subject :</string>
    <string name="view">View</string>
    <string name="accept">Accept</string>
    <string name="_0">0</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="_upload_aadhar">+ Upload Aadhar</string>
    <string name="_upload_test_file">+ Upload Test File</string>
    <string name="_upload_pan">+ Upload Pan</string>
    <string name="sir_name">sir name</string>
    <string name="select_gender">Select Gender</string>
    <string name="phone">Phone</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="work_location">Work Location</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="gst">Gst</string>
    <string name="aadhar">Aadhar Card</string>
    <string name="pan_card">Pan Card</string>
    <string name="per_hour_fees_">Per Hour Fees :</string>
    <string name="_27_march_2023">27 March 2023</string>
    <string name="notifications">Notifications</string>
    <string name="title_wallet">Wallet</string>
    <string name="select_country">Select Country</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="channel_description">channel description</string>
    <string name="channel_name">channel name</string>
    <string name="school_name_">School Name :</string>
    <string name="teaching_preferences">Teaching Preferences</string>
    <string name="subject">Subject :</string>
    <string name="_10_june_2022">10 Jun 2022</string>
    <string name="my_chat">My Chat</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="get">Get</string>
    <string name="payment_status_">Payment Status :</string>
    <string name="paid_amount">Paid Amount :</string>
    <string name="group_chat">Group Chat</string>
    <string name="search_group">Search Group</string>
    <string name="joining_date">Joining Date</string>
    <string name="assessment">Assessment</string>
    <string name="test_name">Test Name</string>
    <string name="test_name_">Test Name :</string>
    <string name="total_marks_">Total Marks :</string>
    <string name="total_marks">Total Marks</string>
    <string name="obtained_marks_">Obtained Marks :</string>
    <string name="obtained_marks">Obtained Marks</string>
    <string name="date">Date</string>
    <string name="assessment_date_">Assessment Date :</string>
    <string name="coordinator_name_">Coordinator Name :</string>
    <string name="feedback_">Feedback :</string>
    <string name="feedback">Feedback</string>
    <string name="userid">UserId</string>
</resources>