<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".auth.LoginActivity">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_marginTop="@dimen/status_bar_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/status_bar_size"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_240sdp"
                    android:src="@drawable/slider_image1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:id="@+id/login_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/login_text_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />


                <TextView
                    android:id="@+id/email_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_start"
                    android:fontFamily="@font/inter"
                    android:text="@string/userid"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_textView" />

                <EditText
                    android:id="@+id/user_id"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/editrext_background_circular"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_your_user_id"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_13ssp"
                    android:textColorHint="@color/theme_hint_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_textView" />

                <TextView
                    android:id="@+id/password_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_start"
                    android:fontFamily="@font/inter"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_id" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/editrext_background_circular"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/_13ssp"
                    android:textColorHint="@color/theme_hint_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_textView" />

                <ImageView
                    android:id="@+id/password_eye"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:src="@drawable/ic_views"
                    app:layout_constraintBottom_toBottomOf="@+id/login_password"
                    app:layout_constraintEnd_toEndOf="@+id/login_password"
                    app:layout_constraintTop_toTopOf="@+id/login_password"
                    app:tint="@color/gray1" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/inter"
                    android:paddingStart="@dimen/_32sdp"
                    android:paddingEnd="@dimen/_32sdp"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_password" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/forgot_password"
                    android:textColor="@color/link_color"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="@+id/login_button"
                    app:layout_constraintStart_toStartOf="@+id/login_button"
                    app:layout_constraintTop_toBottomOf="@+id/login_button" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/login_button"
                    app:layout_constraintStart_toStartOf="@+id/login_button"
                    app:layout_constraintTop_toBottomOf="@+id/login_button">

                    <TextView
                        android:id="@+id/don_t_have_an_account_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/gray1"
                        android:textSize="@dimen/_11ssp" />

                    <TextView
                        android:id="@+id/sign_up_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_toEndOf="@id/don_t_have_an_account_textview"
                        android:fontFamily="@font/inter"
                        android:text="@string/sign_up"
                        android:textColor="@color/link_color"
                        android:textSize="@dimen/_11ssp" />

                </RelativeLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loader"
            layout="@layout/custom_loader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>