<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".auth.ForgotPasswordActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:src="@drawable/forgot_password_lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_21sdp"
                    android:fontFamily="@font/inter"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/_215sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_21sdp"
                    android:fontFamily="@font/inter"
                    android:text="@string/please_enter_your_email_address_to_receive_a_verification_code"
                    android:textAlignment="center"
                    android:textColor="@color/app_theme_color"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/editrext_background_circular"
                    android:fontFamily="@font/inter"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/send_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/inter"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_edittext" />


                <TextView
                    android:id="@+id/back_to_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/inter"
                    android:text="@string/back_to_login"
                    android:textColor="@color/app_theme_color"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/send_button"
                    app:layout_constraintStart_toStartOf="@+id/send_button"
                    app:layout_constraintTop_toBottomOf="@+id/send_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loader"
            layout="@layout/custom_loader" />
    </RelativeLayout>

</layout>
