<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_theme_color"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray6"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/selector_viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/home_selector_color"
                app:cardCornerRadius="@dimen/_16sdp"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginTop="@dimen/margin_start"
                >

                <LinearLayout
                    android:weightSum="3"
                    android:padding="@dimen/_4sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seprator"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_13ssp"
                        android:fontFamily="@font/inter"
                        android:gravity="end"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seprator"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_13ssp"
                        android:fontFamily="@font/inter"
                        android:gravity="end"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:weightSum="3"
                    android:padding="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/today_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/course"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/seven_days_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/books"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/one_month_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/general"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:textStyle="bold"
                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_start"
                android:layout_below="@+id/selector_viewPager"
                />


        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>